==> kyyang28/stm32f407disc_pid/src/quad/drivers/serial_uart.c <==
#include "serial_uart.h"
#include "stm32f4xx_usart.h"
#include "stm32f4xx_dma.h"
#include "serial_uart_impl.h"
#include "utils.h"

static void uartReconfigure(uartPort_t *uartPort)
{
	USART_InitTypeDef USART_InitStructure;
	USART_Cmd(uartPort->USARTx, DISABLE);
	
	/* Configure the baudrate */
	USART_InitStructure.USART_BaudRate = uartPort->port.baudRate;
	
	/* Configure the word length to 8 bits or 9 bits
	 * According to the stm32 documentation wordlen has to be 9 for parity bits
	 * This does not seem to matter for rx but will give bad data on tx!
	 */
	if (uartPort->port.options & SERIAL_PARITY_EVEN) {
		USART_InitStructure.USART_WordLength = USART_WordLength_9b;
	}else {
		USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	}
	
	/* Configure the stop bits to either 2 or 1 */
	USART_InitStructure.USART_StopBits = (uartPort->port.options & SERIAL_STOPBITS_2) ? USART_StopBits_2 : USART_StopBits_1;
	
	/* Configure the parity bit to even or none */
	USART_InitStructure.USART_Parity = (uartPort->port.options & SERIAL_PARITY_EVEN) ? USART_Parity_Even : USART_Parity_No;
	
	/* Configure the hardware flow control to none */
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	
	/* Configure the mode */
	USART_InitStructure.USART_Mode = 0;
	if (uartPort->port.mode & MODE_RX) {
		USART_InitStructure.USART_Mode |= USART_Mode_Rx;
	}
	
	if (uartPort->port.mode & MODE_TX) {
		USART_InitStructure.USART_Mode |= USART_Mode_Tx;
	}
	
	/* Initialise USART_InitStructure data type */
	USART_Init(uartPort->USARTx, &USART_InitStructure);
	
	/* Configure USART pin inversion */
	usartConfigurePinInversion(uartPort);
	
	if (uartPort->port.options & SERIAL_BIDIR) {
		USART_HalfDuplexCmd(uartPort->USARTx, ENABLE);
	}else {
		USART_HalfDuplexCmd(uartPort->USARTx, DISABLE);
	}
	
	USART_Cmd(uartPort->USARTx, ENABLE);
}

serialPort_t *uartOpen(USART_TypeDef *USARTx, serialReceiveCallbackPtr rxCallback, uint32_t baudRate, portMode_t mode, portOptions_t options)
{
	uartPort_t *s = NULL;

	if (false) {
#ifdef USE_UART1
	}else if (USARTx == USART1) {
		s = serialUART1(baudRate, mode, options);
#endif
#ifdef USE_UART2
	}else if (USARTx == USART2) {
		s = serialUART2(baudRate, mode, options);
#endif
#ifdef USE_UART3
	}else if (USARTx == USART3) {
		s = serialUART3(baudRate, mode, options);
#endif
#ifdef USE_UART4
	}else if (USARTx == UART4) {
//		s = serialUART4(baudRate, mode, options);
#endif
#ifdef USE_UART5
	}else if (USARTx == UART5) {
//		s = serialUART5(baudRate, mode, options);
#endif
#ifdef USE_UART6
	}else if (USARTx == USART6) {
		s = serialUART6(baudRate, mode, options);
#endif
	}else {
		return (serialPort_t *)s;
	}
	
	s->txDMAEmpty = true;
	
	/* common serial initialisation code should move to serialPort::init() */
	s->port.rxBufferHead = s->port.rxBufferTail = 0;
	s->port.txBufferHead = s->port.txBufferTail = 0;
	
	/* callback works for IRQ-based RX ONLY */
	s->port.rxCallback = rxCallback;
	s->port.mode = mode;
	s->port.baudRate = baudRate;
	s->port.options = options;
	
	uartReconfigure(s);
	
	/* Receive DMA or IRQ */
	DMA_InitTypeDef DMA_InitStructure;
	if (mode & MODE_RX) {
#ifdef STM32F4
		if (s->rxDMAStream) {
			DMA_StructInit(&DMA_InitStructure);
			DMA_InitStructure.DMA_PeripheralBaseAddr = s->rxDMAPeripheralBaseAddr;
			DMA_InitStructure.DMA_Priority = DMA_Priority_Medium;
			DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
			DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
			DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
			DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
			DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
			DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_1QuarterFull;
			DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
			DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
#endif
			DMA_InitStructure.DMA_BufferSize = s->port.rxBufferSize;

#ifdef STM32F4
			DMA_InitStructure.DMA_Channel = s->rxDMAChannel;
			DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;
			DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;
			DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t)s->port.rxBuffer;
			DMA_DeInit(s->rxDMAStream);
			DMA_Init(s->rxDMAStream, &DMA_InitStructure);
			DMA_Cmd(s->rxDMAStream, ENABLE);
			USART_DMACmd(s->USARTx, USART_DMAReq_Rx, ENABLE);
			
			/* Returns the number of remaining data units in the current DMAy Streamx transfer. */
			s->rxDMAPos = DMA_GetCurrDataCounter(s->rxDMAStream);
#endif			
		}else {
			USART_ClearITPendingBit(s->USARTx, USART_IT_RXNE);
			USART_ITConfig(s->USARTx, USART_IT_RXNE, ENABLE);
		}
	}
	
	/* Transmit DMA or IRQ */
	if (mode & MODE_TX) {
#ifdef STM32F4
		if (s->txDMAStream) {
			DMA_StructInit(&DMA_InitStructure);
			DMA_InitStructure.DMA_PeripheralBaseAddr = s->txDMAPeripheralBaseAddr;
			DMA_InitStructure.DMA_Priority = DMA_Priority_Medium;
			DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
			DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
			DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
			DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
			DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
			DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_1QuarterFull;
			DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
			DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
#endif
			DMA_InitStructure.DMA_BufferSize = s->port.txBufferSize;
			
#ifdef STM32F4
			DMA_InitStructure.DMA_Channel = s->txDMAChannel;
			DMA_InitStructure.DMA_DIR = DMA_DIR_MemoryToPeripheral;
			DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
			DMA_DeInit(s->txDMAStream);
			DMA_Init(s->txDMAStream, &DMA_InitStructure);
			DMA_ITConfig(s->txDMAStream, DMA_IT_TC | DMA_IT_FE | DMA_IT_TE | DMA_IT_DME, ENABLE);
			DMA_SetCurrDataCounter(s->txDMAStream, 0);
#endif
			USART_DMACmd(s->USARTx, USART_DMAReq_Tx, ENABLE);
		}else {
			USART_ITConfig(s->USARTx, USART_IT_TXE, ENABLE);
		}
	}
	
	USART_Cmd(s->USARTx, ENABLE);
	
	return (serialPort_t *)s;
}

void uartStartTxDMA(uartPort_t *s)
{
#ifdef STM32F4
	DMA_Cmd(s->txDMAStream, DISABLE);
	DMA_MemoryTargetConfig(s->txDMAStream, (uint32_t)&s->port.txBuffer[s->port.txBufferTail], DMA_Memory_0);
	//s->txDMAStream->M0AR = (uint32_t)&s->port.txBuffer[s->port.txBufferTail];
	if (s->port.txBufferHead > s->port.txBufferTail) {
		s->txDMAStream->NDTR = s->port.txBufferHead - s->port.txBufferTail;
		s->port.txBufferTail = s->port.txBufferHead;
	}else {
		s->txDMAStream->NDTR = s->port.txBufferSize - s->port.txBufferTail;
		s->port.txBufferTail = 0;
	}
	
	s->txDMAEmpty = false;
	DMA_Cmd(s->txDMAStream, ENABLE);
#endif	
}

void uartWrite(serialPort_t *instance, uint8_t ch)
{
	uartPort_t *s = (uartPort_t *)instance;
	s->port.txBuffer[s->port.txBufferHead] = ch;
	if (s->port.txBufferHead + 1 >= s->port.txBufferSize) {
		s->port.txBufferHead = 0;
	}else {
		s->port.txBufferHead++;
	}
	
#ifdef STM32F4
	if (s->txDMAStream) {
		if (!(s->txDMAStream->CR & 1)) {
#endif
			uartStartTxDMA(s);
		}
	}else {
		USART_ITConfig(s->USARTx, USART_IT_TXE, ENABLE);
	}
}
