==> GeekBoy666/inav/src/main/drivers/serial_uart_hal.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>
#include "platform.h"
#include "build_config.h"
#include "common/utils.h"
#include "gpio.h"
#include "nvic.h"
#include "inverter.h"
#include "serial.h"
#include "serial_uart.h"
#include "serial_uart_impl.h"
#define UART_X_TXRX_CONFIG(X , DIR) \
    {\
        USART##X##_GPIO ,\
        USART##X##_##DIR##_PIN ,\
        MCU_UART##X##_AF ,\
        DIR####X##Buffer,\
        UART##X##_##DIR##_BUFFER_SIZE,\
        USE_USART##X##_##DIR##_DMA,\
        &hdma_##DIR####X ,\
        MCU_UART##X##_DMA_##DIR##_STREAM,\
        MCU_UART##X##_DMA_##DIR##_CHANNEL,\
        NVIC_PRIO_SERIALUART##X##_##DIR##DMA,\
        MCU_UART##X##_DMA_##DIR##_STREAM_IRQn \
    }
#define UART_X_CONFIG(X) \
    {\
        &uartPort##X,\
        USART##X,\
        USART##X##_IRQn,\
        UART_X_TXRX_CONFIG(X,TX),\
        UART_X_TXRX_CONFIG(X,RX)\
    }
#define UARTxSETUP(X) \
static uartPort_t uartPort##X;\
static volatile uint8_t RX##X##Buffer[UART##X##_RX_BUFFER_SIZE];\
static volatile uint8_t TX##X##Buffer[UART##X##_TX_BUFFER_SIZE];\
static DMA_HandleTypeDef hdma_TX##X;\
static DMA_HandleTypeDef hdma_RX##X;\
void USART##X##_IRQHandler(void)\
{\
    HAL_UART_IRQHandler(&uartPort##X.Handle);\
    uartIrqHandler(&uartPort##X);\
}\
void MCU_UART##X##_DMA_TX_IRQHandler(void)\
{\
    HAL_DMA_IRQHandler(&hdma_TX##X);\
    handleUartTxDma(&uartPort##X);\
}\
void MCU_UART##X##_DMA_RX_IRQHandler(void)\
{\
    HAL_DMA_IRQHandler(&hdma_RX##X);\
}

static void uartReconfigure(uartPort_t *uartPort)
{
    HAL_UART_DeInit(&uartPort->Handle);
    uartPort->Handle.Init.BaudRate = uartPort->port.baudRate;
    uartPort->Handle.Init.WordLength = UART_WORDLENGTH_8B;
    uartPort->Handle.Init.StopBits = (uartPort->port.options & SERIAL_STOPBITS_2) ? USART_STOPBITS_2 : USART_STOPBITS_1;
    uartPort->Handle.Init.Parity = (uartPort->port.options & SERIAL_PARITY_EVEN) ? USART_PARITY_EVEN : USART_PARITY_NONE;
    uartPort->Handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    uartPort->Handle.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
    uartPort->Handle.Init.Mode = 0;

    if (uartPort->port.mode & MODE_RX)
        uartPort->Handle.Init.Mode |= UART_MODE_RX;
    if (uartPort->port.mode & MODE_TX)
        uartPort->Handle.Init.Mode |= UART_MODE_TX;

    usartConfigurePinInversion(uartPort);

    if(uartPort->port.options & SERIAL_BIDIR)
        HAL_HalfDuplex_Init(&uartPort->Handle);
    else
        HAL_UART_Init(&uartPort->Handle);
}

serialPort_t *uartOpen(USART_TypeDef *USARTx, serialReceiveCallbackPtr callback, uint32_t baudRate, portMode_t mode, portOptions_t options)
{
    uartPort_t *s = NULL;
    uartConfig_t cfg = uartFindConfig(USARTx);
    
    s = cfg.uartport;
    if(s == NULL) return (serialPort_t *)s;    
    uartOpenPortX(cfg, s, baudRate, mode, options);    

    s->txDMAEmpty = true;
    
    // common serial initialisation code should move to serialPort::init()
    s->port.rxBufferHead = s->port.rxBufferTail = 0;
    s->port.txBufferHead = s->port.txBufferTail = 0;
    // callback works for IRQ-based RX ONLY
    s->port.callback = callback;
    s->port.mode = mode;
    s->port.baudRate = baudRate;
    s->port.options = options;

    uartReconfigure(s);

    // Receive DMA or IRQ
    DMA_InitTypeDef DMA_InitStructure;
    if (mode & MODE_RX) 
    {
        if (s->rxDMAStream) 
        {
            cfg.rx.hdma->Instance = cfg.rx.dmaStream;
            cfg.rx.hdma->Init.Channel = cfg.rx.dmaChannel;
            cfg.rx.hdma->Init.Direction = DMA_PERIPH_TO_MEMORY;
            cfg.rx.hdma->Init.PeriphInc = DMA_PINC_DISABLE;
            cfg.rx.hdma->Init.MemInc = DMA_MINC_ENABLE;
            cfg.rx.hdma->Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
            cfg.rx.hdma->Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
            cfg.rx.hdma->Init.Mode = DMA_CIRCULAR;
            cfg.rx.hdma->Init.FIFOMode = DMA_FIFOMODE_DISABLE;
            cfg.rx.hdma->Init.FIFOThreshold = DMA_FIFO_THRESHOLD_1QUARTERFULL;
            cfg.rx.hdma->Init.PeriphBurst = DMA_PBURST_SINGLE;
            cfg.rx.hdma->Init.MemBurst = DMA_MBURST_SINGLE;
            cfg.rx.hdma->Init.Priority = DMA_PRIORITY_MEDIUM;
            
            
            HAL_DMA_DeInit(cfg.rx.hdma);
            HAL_DMA_Init(cfg.rx.hdma);
            /* Associate the initialized DMA handle to the UART handle */
            __HAL_LINKDMA(&cfg.uartport->Handle, hdmarx, *cfg.rx.hdma);
            
            HAL_UART_Receive_DMA(&cfg.uartport->Handle, (uint8_t *)cfg.rx.buff, cfg.rx.BuffSize);

            s->rxDMAPos = __HAL_DMA_GET_COUNTER(cfg.rx.hdma);

        } 
        else 
        {
            __HAL_UART_CLEAR_IT(&cfg.uartport->Handle, UART_FLAG_RXNE);
            __HAL_UART_ENABLE_IT(&cfg.uartport->Handle, UART_IT_RXNE);
            HAL_UART_Receive_IT(&cfg.uartport->Handle, (uint8_t *)cfg.rx.buff, cfg.rx.BuffSize); 
        }
    }

    // Transmit DMA or IRQ
    if (mode & MODE_TX) {

        if (s->txDMAStream) {
            cfg.tx.hdma->Instance = cfg.tx.dmaStream;
            cfg.tx.hdma->Init.Channel = cfg.tx.dmaChannel;
            cfg.tx.hdma->Init.Direction = DMA_MEMORY_TO_PERIPH;
            cfg.tx.hdma->Init.PeriphInc = DMA_PINC_DISABLE;
            cfg.tx.hdma->Init.MemInc = DMA_MINC_ENABLE;
            cfg.tx.hdma->Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
            cfg.tx.hdma->Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
            cfg.tx.hdma->Init.Mode = DMA_NORMAL;
            cfg.tx.hdma->Init.FIFOMode = DMA_FIFOMODE_DISABLE;
            cfg.tx.hdma->Init.FIFOThreshold = DMA_FIFO_THRESHOLD_1QUARTERFULL;
            cfg.tx.hdma->Init.PeriphBurst = DMA_PBURST_SINGLE;
            cfg.tx.hdma->Init.MemBurst = DMA_MBURST_SINGLE;
            cfg.tx.hdma->Init.Priority = DMA_PRIORITY_MEDIUM;
            
            
            HAL_DMA_DeInit(cfg.tx.hdma);
            HAL_DMA_Init(cfg.tx.hdma);
            /* Associate the initialized DMA handle to the UART handle */
            __HAL_LINKDMA(&cfg.uartport->Handle, hdmatx, *cfg.tx.hdma);
            
            __HAL_DMA_ENABLE_IT(cfg.tx.hdma, DMA_IT_TC|DMA_IT_FE|DMA_IT_TE|DMA_IT_DME);
            __HAL_DMA_SET_COUNTER(cfg.tx.hdma, 0);
        } else {
            __HAL_UART_ENABLE_IT(&cfg.uartport->Handle, UART_IT_TXE);
        }
    }

    return (serialPort_t *)s;
}

void uartStartTxDMA(uartPort_t *s)
{
    uint16_t size = 0;
    HAL_UART_DMAStop(&s->Handle);
   
    if (s->port.txBufferHead > s->port.txBufferTail) {
        size = s->port.txBufferHead - s->port.txBufferTail;
        s->port.txBufferTail = s->port.txBufferHead;
    } else {
        size = s->port.txBufferSize - s->port.txBufferTail;
        s->port.txBufferTail = 0;
    }
    s->txDMAEmpty = false;
    HAL_UART_Transmit_DMA(&s->Handle, (uint8_t *)&s->port.txBuffer[s->port.txBufferTail], size);

}

void uartWrite(serialPort_t *instance, uint8_t ch)
{
    uartPort_t *s = (uartPort_t *)instance;
    s->port.txBuffer[s->port.txBufferHead] = ch;
    if (s->port.txBufferHead + 1 >= s->port.txBufferSize) {
        s->port.txBufferHead = 0;
    } else {
        s->port.txBufferHead++;
    }


    if (s->txDMAStream) {
        if (!(s->txDMAStream->CR & 1))
            uartStartTxDMA(s);
    } else {
        __HAL_UART_ENABLE_IT(&s->Handle, UART_IT_TXE);
    }
}
